--- a/vue/SOMS/src/assets/base.css
+++ b/vue/SOMS/src/assets/base.css
@@ -22,6 +22,7 @@
 }
 
 /* semantic color variables for this project */
+@media (prefers-color-scheme: dark) {
 :root {
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
@@ -35,8 +36,8 @@
 
   --section-gap: 160px;
 }
+}
 
-@media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--vt-c-black);
     --color-background-soft: var(--vt-c-black-soft);
@@ -48,7 +49,7 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
+
 
 *,
 *::before,
@@ -60,11 +61,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  color: var(--color-text) !important;
+  background: var(--color-background) !important;
   line-height: 1.6;
   font-family:
     Inter,
